# Idris-dev

./: .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .mailmap  .stylish-haskell.yaml  .travis.yml  CHANGELOG  CHANGELOG.md  CITATION.md  CONTRIBUTING.md  CONTRIBUTORS  Complete.idr  Dockerfile  EmptyTest.idr  HLint.hs  INSTALL.md  LICENSE  Makefile  ParseTest.idr  Parser.idr  README  README.md  RELEASE-CHECKS.md  Setup.hs  Solver.idr  appveyor.yml  azure-pipelines.yml  check-stylish.sh  config.mk  cppcheck-targets  custom.mk-alldeps  decls.mi  default.nix  git-credential-osxkeychain  guix.scm  idris.cabal  idris.nix  interp.idr  interp.mi  (+21 more)
.github/: ISSUE_TEMPLATE.md
benchmarks/: ALL  README  build  build.pl  run  run.pl
benchmarks/fasta/: fasta.idr  fasta.ipkg
benchmarks/nbody/: nbody.idr  noby.ipkg
benchmarks/pidigits/: pidigits.idr  pidigits.ipkg
benchmarks/quasigroups/: Main.idr  Parser.idr  Solver.idr  board  qgsolve.ipkg
benchmarks/trivial/: sortvec.idr  sortvec.ipkg
codegen/idris-c/: Main.hs
codegen/idris-codegen-c/: Main.hs  Setup.hs  idris-codegen-c.cabal
codegen/idris-codegen-c/rts/: Makefile  getline.c  idris_bitstring.h  idris_gc.h  idris_rts.c  idris_rts.h  idris_stats.h  idris_stdfgn.h  idris_utf8.c  idris_utf8.h
codegen/idris-codegen-c/src/Codegen/C/: Register.hs
codegen/idris-codegen-c/src/IRTS/: CodegenC.hs
codegen/idris-codegen-javascript/: Main.hs  idris-codegen-javascript.cabal
codegen/idris-codegen-javascript/jsrts/: Runtime-node.js
codegen/idris-codegen-javascript/jsrts/jsbn/: jsbn.js
codegen/idris-codegen-javascript/src/: NodeMain.hs
codegen/idris-codegen-javascript/src/IRTS/: CodegenJavaScript.hs
codegen/idris-codegen-node/: Main.hs
codegen/idris-java/: Main.hs
codegen/idris-javascript/: Main.hs
codegen/idris-node/: Main.hs
contribs/: idriscasesplit.vim  idrislang.sty
contribs/diagrams/: internals-full.tex  internals-simple.tex  platform-full.tex  platform-simple.tex  preamble.tex
contribs/gtksourceview-2.0-language-spec/: idris.lang
contribs/lib/: ._simpleparser.idr  simpleparser.idr
core/: LICENSE  Setup.hs  idris-core.cabal
core/src/: .ghci
docs/: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  STYLE-GUIDE.md  checkdocs.sh  conf.py  index.rst  make.bat
docs/effects/: conclusions.rst  depeff.rst  hangman.rst  impleff.rst  index.rst  introduction.rst  simpleeff.rst  state.rst  summary.rst
docs/elaboratorReflection/: elabReflection.rst  elaborator-reflection.rst  index.rst
docs/faq/: faq.rst  index.rst
docs/guides/: index.rst  theorem-prover.rst  type-providers-ffi.rst  visibility-modifiers.rst
docs/ide/: protocol.rst
docs/image/: README.md
docs/listing/: idris-prompt-helloworld.txt  idris-prompt-interp.txt  idris-prompt-start.txt
docs/parserLibrary/: index.rst  introduction.rst  lexer.rst  parser.rst  whitespace.rst
docs/proofs/: definitional.rst  elabReflection.rst  example1.rst  generatingData.rst  holes.rst  index.rst  inductive.rst  interactive.rst  interactiveOld.rst  patterns.rst  pluscomm.rst  primative.rst  primitive.rst  propositional.rst  tactics.rst
docs/reference/: codegen.rst  compilation.rst  documenting.rst  elaborator-reflection.rst  (+18 more)
effects/: Effects.idr  Makefile  effects.ipkg
examples/: Makefile  classes.idr  foo.idr  hello.idr  letbind.idr  prims.idr  vbroken.idr  wheres.idr
icons/: idris_icon.rc  x-idris-bytecode.xml  x-idris-literate.xml  x-idris.xml
idrisdoc/: script.js  styles.css
iif/: adder.iif  big.iif  ctest.c  lazy.iif  testmap.iif  testvm.iif
impl-paper/: Makefile  acmtrans2m.cls  conclusions.tex  delab.tex  elaboration.tex  hll.tex  impldtp.tex  intro.tex  library.bib  library.ltx  literature.bib  macros.ltx  overview.tex  syntax.tex  typechecking.tex
java/: executable_pom.xml  executable_pom_template.xml  pom_template.xml
javascript/: JavaScript.idr  Makefile  javascript.ipkg
js/: Runtime-browser.js  Runtime-common.js  Runtime-node.js  Runtime.js
jsrts/: Runtime-browser.js  Runtime-common.js  Runtime-javascript.js  Runtime-node.js
jstest/: tarai.js
lib/: Builtins.idr  Checkall.idr  IO.idr  Makefile  Prelude.idr  Providers.idr  System.idr  Uninhabited.idr  base.ipkg  builtins.idr  checkall.idr  either.idr  io.idr  list.idr  maybe.idr  nat.idr  prelude.idr  system.idr  vect.idr
libs/: Makefile
linux/: make_deb.sh
llvm/: Makefile  defs.c
main/: Main.hs
man/: idris.1
packaging/: control.in  make_deb.sh  mkpkg.sh
rbrts/: Runtime-common.rb
rts/: Makefile  closure.c  closure.h  ftoa.c  ftoa.h  getline.c  getline.h  idris_bare_metal.h  idris_bitstring.c  idris_bitstring.h  idris_buffer.c  idris_buffer.h  idris_gc.c  idris_gc.h  idris_gmp.c  idris_gmp.h  idris_heap.c  idris_heap.h  idris_main.c  idris_net.c  idris_net.h  idris_opts.c  idris_opts.h  idris_rts.c  idris_rts.h  idris_stats.c  idris_stats.h  idris_stdfgn.c  idris_stdfgn.h  idris_utf8.c  idris_utf8.h  itoa.c  itoa.h  mini-gmp.c  mini-gmp.h
rts/bare-metal/: CMakeLists.txt  README.md  idris_main.c
rts/seL4/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md  idris_main.c
samples/: ConsoleIO.idr  Exception.idr  Makefile  ReadInt.idr  binary.idr  hworld.idr  interp-alt.idr  interp.idr  javaffi.idr  named_instance.lidr  reflection.idr  run  vadd.idr
scripts/: README.org  generate-multi-ghc-travis-template  runidris  runidris-node  travis-before-install.sh  travis-install.sh  travis-test.sh
src/: Core.hs  CoreParser.hs  Elaborate.hs  Evaluate.hs  Main.hs  Parser.hs  ProofShell.hs  ProofState.hs  ShellParser.hs  Test.hs  Typecheck.hs  Unify.hs  test.mi
support/: Makefile  network.c  network.h  testidr.c  testidr.h  threads.c  threads.h
test/: Makefile  README  README.md  TestData.hs  TestRun.hs  mkjavatest.pl  mktest.pl  runtest.hs  runtest.pl
tutorial/: Makefile  classes.tex  conclusions.tex  conf.ltx  dsl.tex  fpmacros.sty  idris-tutorial.tex  idrislang.sty  interp.tex  intro.tex  library.ltx  literature.bib  macros.ltx  miscellany.tex  modules.tex  provisional.tex  starting.tex  syntax.tex  theorems.tex  typesfuns.tex  views.tex
(+2319 files in other folders)
