Name:           idris
Version:        0.99
License:        BSD3
License-file:   LICENSE
Author:         Edwin Brady
Maintainer:     Edwin Brady <eb@cs.st-andrews.ac.uk>
Homepage:       http://www.idris-lang.org/

Stability:      Beta
Category:       Compilers/Interpreters, Dependent Types
Synopsis:       Functional Programming Language with Dependent Types
Description:    Idris is a general purpose language with full dependent types.
                It is compiled, with eager evaluation.
                Dependent types allow types to be predicated on values,
                meaning that some aspects of a program's behaviour can be
                specified precisely in the type. The language is closely
                related to Epigram and Agda. There is a tutorial at
                <http://www.idris-lang.org/documentation>.
                Features include:
                .
                * Full, first class, dependent types with dependent pattern matching
                .
                * where clauses, with rule, case expressions,
                  pattern matching let and lambda bindings
                .
                * Interfaces (similar to type classes), monad comprehensions
                .
                * do notation, idiom brackets, syntactic conveniences for lists,
                  tuples, dependent pairs
                .
                * Totality checking
                .
                * Coinductive types
                .
                * Indentation significant syntax, extensible syntax
                .
                * Cumulative universes
                .
                * Simple foreign function interface (to C)
                .
                * Hugs style interactive environment

Cabal-Version:  >= 1.8.1

Build-type:     Custom

Tested-With:    GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

Data-files:     idrisdoc/styles.css

Extra-doc-files:
                CHANGELOG.md
                CITATION.md
                CONTRIBUTING.md
                CONTRIBUTORS
                README.md
                RELEASE-CHECKS.md
                idris-tutorial.pdf
                samples/effects/*.idr
                samples/misc/*.idr
                samples/misc/*.lidr
                samples/tutorial/*.idr

-- extra-source-files is generated by Setup.hs using `git --ls-files`.
Extra-source-files:

Source-repository head
  type:     git
  location: git://github.com/idris-lang/Idris-dev.git

Flag freestanding
  description:  Build an Idris that doesn't use cabal
  default:      False
  manual:       True

Flag CI
  description:  Built everything using "-Werror", meant for CI-builds only
  default:      False
  manual:       True

Flag execonly
  description:  Build executables only, skip the libraries
  default:      False
  manual:       True

Flag codegen_C
  description:  Bundles the C RTS and code generator
  default:      True
  manual:       False

Flag codegen_JavaScript
  description:  Bundles the JavaScript/Node RTS and code generators
  default:      True
  manual:       False

Executable idris
  main-is:        Main.hs
  hs-source-dirs: src
  other-modules:
                -- Auto Generated
                  Paths_idris
                , Tools_idris

  build-depends:  idris-core
                , base
                , filepath
                , directory

  if flag(freestanding)
     other-modules: Target_idris
     cpp-options:   -DFREESTANDING
  if flag(CI)
     ghc-options:   -Werror
  if flag(codegen_C)
     build-depends: idris-codegen-c
     cpp-options:   -DCODEGEN_C
  if flag(codegen_JavaScript)
     build-depends: idris-codegen-javascript
     cpp-options:   -DCODEGEN_JS

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -funbox-strict-fields

Test-suite regression-and-feature-tests
  type:           exitcode-stdio-1.0
  main-is:        TestRun.hs
  other-modules:  TestData
  hs-source-dirs: test

  build-depends: idris-core
               , base
               , containers
               , process
               , time
               , filepath
               , directory
               , haskeline >= 0.7
               , optparse-applicative >= 0.11 && < 0.14
               , tagged
               , tasty >= 0.8
               , tasty-golden >= 2.0
               , tasty-rerun >= 1.0.0
               , bytestring
               , transformers
  if impl(ghc < 7.10)
    extensions: DeriveDataTypeable

  if flag(freestanding)
     other-modules: Target_idris
     cpp-options:   -DFREESTANDING
  if flag(CI)
     ghc-options:   -Werror
  if flag(codegen_C)
     build-depends: idris-codegen-c
     cpp-options:   -DCODEGEN_C
  if flag(codegen_JavaScript)
     build-depends: idris-codegen-javascript
     cpp-options:   -DCODEGEN_JS

  ghc-prof-options: -auto-all -caf-all
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -funbox-strict-fields

