Name:           miniidris
Version:        0.1
License:        BSD3
License-file:   LICENSE
Author:         Edwin Brady
Maintainer:     Edwin Brady <eb@cs.st-andrews.ac.uk>
Homepage:       http://www.idris-lang.org/

Stability:      Alpha
Category:       Compilers/Interpreters, Dependent Types
Synopsis:       Dependently Typed Functional Programming Language
Description:    An experimental new version of Idris

Cabal-Version:  >= 1.6
Build-type:     Simple

Executable     miniidris
               Main-is: Main.hs
               hs-source-dirs: src
               Other-modules: Core.TT, Core.Evaluate, Core.Typecheck, 
                              Core.ProofShell, Core.ProofState, Core.CoreParser, 
                              Core.ShellParser, Core.Unify, Core.Elaborate

               Build-depends:   base>=4 && <5, parsec, mtl, Cabal, readline,
                                containers
                                
               Extensions:      MultiParamTypeClasses, FunctionalDependencies,
                                FlexibleInstances
               ghc-prof-options: -auto-all
               ghc-options: -rtsopts
