Name:           idris
Version:        0.9
License:        BSD3
License-file:   LICENSE
Author:         Edwin Brady
Maintainer:     Edwin Brady <eb@cs.st-andrews.ac.uk>
Homepage:       http://www.idris-lang.org/

Stability:      Alpha
Category:       Compilers/Interpreters, Dependent Types
Synopsis:       Dependently Typed Functional Programming Language
Description:    An experimental new version of Idris

Cabal-Version:  >= 1.6
Build-type:     Simple

Data-files:    *.idr
Data-dir:      lib

Executable     idris
               Main-is: Main.hs
               hs-source-dirs: src
               Other-modules: Core.TT, Core.Evaluate, Core.Typecheck, 
                              Core.ProofShell, Core.ProofState, Core.CoreParser, 
                              Core.ShellParser, Core.Unify, Core.Elaborate,
                              Core.CaseTree, 

                              Idris.AbsSyntax, Idris.Parser, Idris.REPL,
                              Idris.REPLParser, Idris.ElabDecls, Idris.Error,
                              Idris.Delaborate, Idris.Primitives, Idris.Imports,
                              Idris.Compiler, Idris.Prover

                              Paths_idris

               Build-depends:   base>=4 && <5, parsec, mtl, Cabal, readline,
                                containers, process, transformers, filepath, directory,
                                epic>=0.1.14
                                
               Extensions:      MultiParamTypeClasses, FunctionalDependencies,
                                FlexibleInstances
               ghc-prof-options: -auto-all
               ghc-options: -rtsopts
