Name:           idris-codegen-c
Version:        0.1.0.0
License:        BSD3
License-file:   LICENSE
Author:         Edwin Brady
Maintainer:     Edwin Brady <eb@cs.st-andrews.ac.uk>
Homepage:       http://www.idris-lang.org/

Stability:      Beta
Category:       Compilers/Interpreters, Dependent Types
Synopsis:       C backend for Idris
Description:    C backend for Idris

Cabal-Version:  >= 1.8.1

Build-type:     Custom

Tested-With:    GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

Data-files:     rts/arduino/idris_main.c
                rts/idris_bitstring.c
                rts/idris_bitstring.h
                rts/idris_gc.c
                rts/idris_gc.h
                rts/idris_gmp.c
                rts/idris_gmp.h
                rts/idris_heap.c
                rts/idris_heap.h
                rts/idris_main.c
                rts/idris_net.c
                rts/idris_net.h
                rts/idris_opts.c
                rts/idris_opts.h
                rts/idris_rts.c
                rts/idris_rts.h
                rts/idris_stats.c
                rts/idris_stats.h
                rts/idris_stdfgn.c
                rts/idris_stdfgn.h
                rts/mini-gmp.c
                rts/mini-gmp.h

Source-repository head
  type:     git
  location: git://github.com/idris-lang/Idris-dev.git

Flag GMP
  description:  Use GMP for Integers
  default:      False
  manual:       True

Flag CI
  description:  Built everything using "-Werror", meant for CI-builds only
  default:      False
  manual:       True

Library
  hs-source-dirs: src
  exposed-modules:
                  IRTS.CodegenC
  other-modules:
               -- Auto Generated
                  Paths_idris_codegen_c

  build-depends:  base >=4 && <5
                , idris-core
                , filepath
                , directory
                , process

  ghc-prof-options: -auto-all -caf-all

  if os(linux)
     build-depends: unix < 2.8
  if os(freebsd)
     build-depends: unix < 2.8
  if os(dragonfly)
     build-depends: unix < 2.8
  if os(darwin)
     build-depends: unix < 2.8
  if os(windows)
     build-depends: Win32 < 2.4
  if flag(GMP)
     build-depends: libffi < 0.2
     extra-libraries: gmp
     cpp-options:   -DIDRIS_GMP
  if flag(CI)
     ghc-options:   -Werror
