Name:           idris-codegen-javascript
Version:        0.1.0.0
License:        BSD3
License-file:   LICENSE
Author:         Edwin Brady
Maintainer:     Edwin Brady <eb@cs.st-andrews.ac.uk>
Homepage:       http://www.idris-lang.org/

Stability:      Beta
Category:       Compilers/Interpreters, Dependent Types
Synopsis:       Javascript backend for Idris
Description:    Javascript backend for Idris

Cabal-Version:  >= 1.8.1

Build-type:     Simple

Tested-With:    GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

Data-files:     jsrts/Runtime-browser.js
                jsrts/Runtime-common.js
                jsrts/Runtime-node.js
                jsrts/jsbn/jsbn.js
                jsrts/jsbn/LICENSE

Source-repository head
  type:     git
  location: git://github.com/idris-lang/Idris-dev.git

Flag CI
  description:  Built everything using "-Werror", meant for CI-builds only
  default:      False
  manual:       True

Library
  hs-source-dirs: src
  exposed-modules:
                  IRTS.CodegenJavaScript
                , IRTS.JavaScript.AST

  other-modules:
               -- Auto Generated
                  Paths_idris_codegen_javascript

  build-depends:  base >=4 && <5
                , idris-core
                , containers
                , text
                , mtl
                , filepath
                , directory

  ghc-prof-options: -auto-all -caf-all

  if os(linux)
     build-depends: unix < 2.8
  if os(freebsd)
     build-depends: unix < 2.8
  if os(dragonfly)
     build-depends: unix < 2.8
  if os(darwin)
     build-depends: unix < 2.8
  if os(windows)
     build-depends: Win32 < 2.4
  if flag(CI)
     ghc-options:   -Werror
